--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Template</title>
   </head>
   <body>
+    <h1>Hello</h1>
     <!--script-->
     <script src="script.js"></script>
   </body>
