--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +18,27 @@
     <link rel="stylesheet" href="style.css" />
     <title>Template</title>
   </head>
-  <body>
+  <body dir="rtl">
+    <main>
+      <div class="box">
+        <div class="quote">
+          <i class="fa-solid fa-quote-right pos"></i>
+          <h1 id="quote">
+            الصّديق الحقيقي هو الّذي يقبل عذرك، ويسامحك إذا أخطأت، ويسدّ مسدّك
+            في غيابك.
+          </h1>
+        </div>
+        <div class="auth">
+          <h3><i id="auth">blablabla</i></h3>
+        </div>
+        <div class="buttons">
+          <button class="btn new-quote" id="new-quote">new quote</button>
+          <button class="btn twitt">
+            <i class="fa-brands fa-twitter"></i>
+          </button>
+        </div>
+      </div>
+    </main>
     <!--script-->
     <script src="script.js"></script>
   </body>
